fixed media options alignment

--- a/components/desk/tool-bar/tools-options/MediaOptions/MediaOptions.module.css
+++ b/components/desk/tool-bar/tools-options/MediaOptions/MediaOptions.module.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.3rem;
+    padding: 0.2rem;
     border-radius: 20%;
 }
 
